--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^7.9.6",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
