--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "slick-carousel": "^1.8.1",
     "swiper": "^12.1.0"
   },
   "devDependencies": {
